# mrcntr-backend

./: .env.example  .gitignore  Cargo.toml  diesel.toml  docs.md  justfile  readme.md  todo.md
.cargo/: config.toml
migrations/2026-05-22-202234-0000_create_experiences/: up.sql
migrations/2026-05-22-203523-0000_create_tags/: up.sql
migrations/2026-05-23-072002-0000_create_experiences_tags/: down.sql  up.sql
migrations/2026-05-27-150407-0000_create_categories/: up.sql
migrations/2026-05-28-162245-0000_create_blogposts/: up.sql
migrations/2026-05-28-191822-0000_create_project_types/: down.sql  up.sql
migrations/2026-05-28-191829-0000_create_project_statuses/: down.sql  up.sql
migrations/2026-05-31-114525-0000_create_projects/: up.sql
migrations/2026-05-31-120031-0000_create_project_blocks/: up.sql
migrations/2026-05-31-212339-0000_create_project_links/: down.sql
migrations/2026-06-01-063945-0000_create_project_ai_usage/: down.sql  up.sql
migrations/2026-06-01-063945-0000_create_project_ai_usages/: down.sql  up.sql
migrations/2026-06-01-114525-0000_create_projects/: up.sql
migrations/2026-06-01-120031-0000_create_project_blocks/: down.sql  up.sql
migrations/2026-06-01-122339-0000_create_project_links/: up.sql
migrations/2026-06-01-143523-0000_create_tags/: down.sql  up.sql
migrations/2026-06-01-152002-0000_create_experiences_tags/: up.sql
migrations/2026-06-01-165030-0000_create_projects_tags/: down.sql  up.sql
migrations/2026-06-06-154255-0000_create_users/: up.sql
migrations/2026-06-06-162245-0000_create_blogposts/: down.sql  up.sql
migrations/2026-06-14-075727-0000_create_roles/: up.sql
migrations/2026-06-14-084255-0000_create_users/: up.sql
migrations/2026-06-14-084505-0000_create_comments/: up.sql
migrations/2026-06-14-092245-0000_create_blogposts/: up.sql
migrations/2026-06-14-104505-0000_create_comments/: up.sql
migrations/2026-07-03-144259-0000_create_featured-blogposts/: down.sql  up.sql
scripts/: create_module.sh
src/: lib.rs  macros.rs  main.rs  modules.rs  router.rs
src/config/: cors.rs  db.rs  error_handler.rs  limiter.rs  openapi.rs  schema.rs
src/middlewares/: auth.rs
src/modules/: auth.rs  experiences.rs  experiences_tags.rs  projects.rs  roles.rs  tags.rs  users.rs
src/modules/auth/: handlers.rs  helpers.rs  (+2 more)
(+68 files in other folders)
