[package]
name = "mrcntr"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-limitation = "0.5.1"
actix-session = "0.11.0"
actix-web = "4.14.0"
argon2 = { version = "0.6.0-rc.8" }
chrono = { version = "0.4.45", features = ["serde"] }
deadpool-redis = { version = "0.23.0", features = ["rt_tokio_1"] }
diesel = { version = "2.3.10", features = [
    "postgres",
    "chrono",
    "r2d2",
    "uuid",
] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
password-hash = "0.6.1"
redis = { version = "1.3.0", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.4", features = ["serde", "v4"] }
